--- a/index.html
+++ b/index.html
@@ -229,7 +229,18 @@
                             <div class="menu-popup-item" data-open-window="pencere-tuzel-sorgu"
                                 data-module-url="modules/kisi-org-ulke/tuzel-kisi-sorgulama.html">1.2. Tüzel Kişi
                                 Bilgileri</div>
-                            <div class="menu-popup-item">1.3. Yabancı Kimlik</div>
+                            <div class="menu-popup-item">
+                                <span>1.3. Yabancı Kimlik</span>
+                                <i class="fa-solid fa-caret-right"></i>
+                                <div class="menu-popup submenu">
+                                    <div class="menu-popup-item" data-open-window="pencere-yabanci-kimlik"
+                                        data-module-url="modules/kisi-org-ulke/yabanci-kimlik.html">1.3.1. Yabancı Kişi
+                                        Sorgu/Kayıt İşlemleri</div>
+                                    <div class="menu-popup-item" data-open-window="pencere-yabanci-kimlik"
+                                        data-module-url="modules/kisi-org-ulke/yabanci-kimlik.html">1.3.2. Yabancı
+                                        Kimlik Bilgileri Güncelle</div>
+                                </div>
+                            </div>
                             <div class="menu-popup-item">1.4. Organizasyon Tanımları</div>
                             <div class="menu-popup-item">1.5. Ülke Tanımları</div>
                             <div class="menu-popup-item">1.6. Organizasyon Ülke Tanımları</div>
