Update UI: Redesign toolbar, add color bar, unify backgrounds

--- a/index.html
+++ b/index.html
@@ -331,7 +331,8 @@
                         <span>Başvuru</span>
                         <div class="menu-popup">
                             <div class="menu-popup-item" data-open-window="pencere-basvuru-belgeleri"
-                                data-module-url="modules/basvuru/basvuru-belgeleri.html">2.1. Başvuru Belgeleri</div>
+                                data-module-url="modules/basvuru/basvuru-belgeleri.html">2.1. Başvuru Belgeleri CTRL+B
+                            </div>
                             <div class="menu-popup-item">2.2. İş Yükü Monitörü</div>
                             <div class="menu-popup-item" data-open-window="pencere-puantaj">2.3. Personel Puantaj
                                 Listesi</div>
