--- a/modules/basvuru/basvuru-belgeleri.html
+++ b/modules/basvuru/basvuru-belgeleri.html
@@ -347,34 +347,111 @@
 
         <!-- TOOLBAR -->
         <div class="tf-toolbar">
-            <button class="tf-btn" title="Çıkış"><i class="fa-solid fa-arrow-right-from-bracket"
-                    style="color:orange;"></i></button>
+            <button class="tf-btn" title="Çıkış"><img src="https://img.icons8.com/color/48/exit.png"
+                    style="width:16px;"></button>
             <div class="tf-tool-sep"></div>
 
             <button class="tf-btn" title="Liste"><i class="fa-solid fa-table-list" style="color:#444;"></i></button>
-            <button class="tf-btn" title="İlk"><i class="fa-solid fa-backward-step"></i></button>
-            <button class="tf-btn" title="Önceki"><i class="fa-solid fa-caret-left"></i></button>
-            <button class="tf-btn" title="Sonraki"><i class="fa-solid fa-caret-right"></i></button>
-            <button class="tf-btn" title="Son"><i class="fa-solid fa-forward-step"></i></button>
+            <div class="tf-tool-sep"></div>
+
+            <!-- Navigasyon -->
+            <button class="tf-btn" title="İlk"><i class="fa-solid fa-backward-step" style="color:#000080;"></i></button>
+            <button class="tf-btn" title="Önceki"><i class="fa-solid fa-caret-left"
+                    style="color:#000080; font-size:16px;"></i></button>
+            <button class="tf-btn" title="Sonraki"><i class="fa-solid fa-caret-right"
+                    style="color:#000080; font-size:16px;"></i></button>
+            <button class="tf-btn" title="Son"><i class="fa-solid fa-forward-step" style="color:#000080;"></i></button>
+            <div class="tf-tool-sep"></div>
+
+            <!-- CRUD İşlemleri -->
+            <button class="tf-btn" title="Ekle (Ctrl+E)"><img src="https://img.icons8.com/color/48/add-file.png"
+                    style="width:16px;"></button>
+            <button class="tf-btn" title="Değiştir (Ctrl+D)"><img src="https://img.icons8.com/color/48/edit-file.png"
+                    style="width:16px;"></button>
+            <button class="tf-btn" title="İptal"><img src="https://img.icons8.com/office/16/undo.png"
+                    style="width:16px;"></button>
+            <button class="tf-btn" title="Kaydet (Ctrl+K)"><i class="fa-solid fa-floppy-disk icon-save"></i></button>
+            <button class="tf-btn" title="Yenile (F5)"><i class="fa-solid fa-arrows-rotate"
+                    style="color:#0066cc;"></i></button>
 
             <div class="tf-tool-sep"></div>
-            <button class="tf-btn" title="Yeni Kayıt"><img src="https://img.icons8.com/color/48/add-file.png"
-                    style="width:16px;"></button>
-            <button class="tf-btn" title="Değiştir"><img src="https://img.icons8.com/color/48/edit-file.png"
-                    style="width:16px;"></button>
-            <button class="tf-btn" title="Kaydet"><i class="fa-solid fa-floppy-disk icon-save"></i></button>
-            <button class="tf-btn" title="İptal"><i class="fa-solid fa-rotate-left"></i></button>
+            <button class="tf-btn" title="Vazgeç"><i class="fa-solid fa-xmark icon-delete"
+                    style="font-weight:900;"></i></button>
+            <button class="tf-btn" title="Uygula (Ctrl+S)"><i class="fa-solid fa-floppy-disk"
+                    style="color:#444;"></i></button>
+
+            <!-- Özel İşlemler -->
+            <div class="tf-tool-sep"></div>
+            <button class="tf-btn" title="Başvuru Hareket Bilgileri">
+                <i class="fa-solid fa-file-contract" style="color:#a52a2a;"></i>
+                <i class="fa-solid fa-magnifying-glass"
+                    style="font-size:8px; margin-left:-4px; margin-top:6px; color:#000;"></i>
+            </button>
+            <button class="tf-btn" title="Başvuru Belgeleri Kullanıcı İhlal">
+                <i class="fa-solid fa-triangle-exclamation" style="color:red;"></i>
+            </button>
 
             <div class="tf-tool-sep"></div>
-            <button class="tf-btn" title="Sil"><i class="fa-solid fa-xmark icon-delete"
-                    style="font-weight:900; font-size:16px;"></i></button>
-            <button class="tf-btn" title="Sorgula"><i class="fa-solid fa-magnifying-glass"></i></button>
-            <button class="tf-btn" title="Çalıştır"><i class="fa-solid fa-bolt icon-lightning"></i></button>
 
-            <!-- Resimdeki sağ taraftaki renkli ikonlar -->
+            <!-- SMS Butonu -->
+            <button class="tf-btn" title="Sms (Metin Girerek Sms Gönder / Sms Geçmişi)">
+                <i class="fa-solid fa-mobile-screen-button" style="color:#ffd700; text-shadow:1px 1px 0 #000;"></i>
+            </button>
+
+            <!-- Yazdırma ve Rapor -->
+            <button class="tf-btn" title="Rapor (Ekran)"><i class="fa-solid fa-print" style="color:#666;"></i></button>
+            <button class="tf-btn" title="Başvuru Belgesi Çıktı"><i class="fa-solid fa-print icon-print"></i></button>
+            <button class="tf-btn" title="Yardım"><i class="fa-solid fa-question icon-help"></i></button>
+
+            <!-- Sağ Taraf -->
             <div style="flex:1;"></div>
-            <button class="tf-btn"><i class="fa-solid fa-print icon-print"></i></button>
-            <button class="tf-btn"><i class="fa-solid fa-question icon-help"></i></button>
+            <button class="tf-btn" title="Filtreleme"><i class="fa-solid fa-filter" style="color:#000080;"></i></button>
+            <button class="tf-btn app-close-btn" title="Kapat"><img src="https://img.icons8.com/emoji/48/door-emoji.png"
+                    style="width:16px;"></button>
+        </div>
+
+        <!-- COLOR BAR (RENK KARTELASI) -->
+        <div
+            style="height: 24px; background: #eef3fa; border-bottom: 1px solid #a0a0a0; display: flex; align-items: center; padding: 0 4px;">
+            <!-- Sol taraftaki tutma yeri (Gripper) -->
+            <div
+                style="width: 4px; height: 16px; border-left: 1px solid #fff; border-right: 1px solid #a0a0a0; margin-right: 2px;">
+            </div>
+            <div
+                style="width: 4px; height: 16px; border-left: 1px solid #fff; border-right: 1px solid #a0a0a0; margin-right: auto;">
+            </div>
+
+            <!-- Renk Kutuları -->
+            <div style="display: flex; gap: 2px;">
+                <div
+                    style="width: 18px; height: 16px; background: #cab1e6; border: 1px solid #7f9db9; cursor: pointer;">
+                </div> <!-- Lila -->
+                <div
+                    style="width: 18px; height: 16px; background: #8bf0ff; border: 1px solid #7f9db9; cursor: pointer;">
+                </div> <!-- Turkuaz -->
+                <div
+                    style="width: 18px; height: 16px; background: #ffff66; border: 1px solid #7f9db9; cursor: pointer;">
+                </div> <!-- Sarı -->
+                <div
+                    style="width: 18px; height: 16px; background: #99ffcc; border: 1px solid #7f9db9; cursor: pointer;">
+                </div> <!-- Su Yeşili -->
+                <div
+                    style="width: 18px; height: 16px; background: #ff9933; border: 1px solid #7f9db9; cursor: pointer;">
+                </div> <!-- Turuncu -->
+                <div
+                    style="width: 18px; height: 16px; background: #ccff99; border: 1px solid #7f9db9; cursor: pointer;">
+                </div> <!-- Fıstık -->
+                <div
+                    style="width: 18px; height: 16px; background: #d0f0d0; border: 1px solid #7f9db9; cursor: pointer;">
+                </div> <!-- Yeşil -->
+                <div
+                    style="width: 18px; height: 16px; background: #ffcccc; border: 1px solid #7f9db9; cursor: pointer;">
+                </div> <!-- Pembe -->
+                <div
+                    style="width: 18px; height: 16px; background: #ffffff; border: 1px solid #7f9db9; cursor: pointer; display: flex; align-items: center; justify-content: center;">
+                    <i class="fa-solid fa-caret-down" style="font-size: 8px; color: #000;"></i>
+                </div>
+            </div>
         </div>
 
         <!-- TABLE -->
