--- a/index.html
+++ b/index.html
@@ -301,9 +301,17 @@
                             <div class="menu-popup-item" data-open-window="pencere-kisi-sorgu"
                                 data-module-url="modules/kisi-org-ulke/kisi-sorgulama.html">1.1. Kişi Bilgileri - Kişi
                                 Sorgulama</div>
-                            <div class="menu-popup-item" data-open-window="pencere-tuzel-sorgu"
-                                data-module-url="modules/kisi-org-ulke/tuzel-kisi-sorgulama.html">1.2. Tüzel Kişi
-                                Bilgileri</div>
+                            <div class="menu-popup-item">
+                                <span>1.2. Tüzel Kişi Bilgileri</span>
+                                <i class="fa-solid fa-caret-right"></i>
+                                <div class="menu-popup submenu">
+                                    <div class="menu-popup-item" data-open-window="pencere-tuzel-sorgu"
+                                        data-module-url="modules/kisi-org-ulke/tuzel-kisi-sorgulama.html">1.2.1. Tüzel
+                                        Kişi
+                                        Sorgulama</div>
+                                    <div class="menu-popup-item">1.2.2. Tüzel Kişi Bilgi Güncelleme</div>
+                                </div>
+                            </div>
                             <div class="menu-popup-item">
                                 <span>1.3. Yabancı Kimlik</span>
                                 <i class="fa-solid fa-caret-right"></i>
